# mediaboard-assignment

./: .gitignore  .pre-commit-config.yaml  README.md  crawled.db  main.py  pyproject.toml  shell.nix
app/: db.py  dependencies.py  load_data.py  logger.py  main.py  schemas.py
app/models/: __init__.py  actor.py  base.py  movie.py  movie__actor.py
app/routers/: crawl.py  read.py
app/scraper/: __init__.py  _query_site.py  list_of_movies.py  movie_page.py  schemas.py
app/utils/: __init__.py  normalize_text.py
tests/: test_full_run.py
