[project]
name = "mediaboard-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.3",
]

[tool.pyright]
venvPath = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true #Reports when a type ignore comment is unnecessary
enableTypeIgnoreComments = false          #Forces use of the more specific # pyright: ignore[...] comments
