[project]
name = "mediaboard-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.41",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "ruff>=0.12.3",
]

[tool.pyright]
venvPath = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true #Reports when a type ignore comment is unnecessary
enableTypeIgnoreComments = false          #Forces use of the more specific # pyright: ignore[...] comments


[tool.ruff]
target-version = "py313"
line-length = 88

# https://beta.ruff.rs/docs/rules/
lint.select = ["ALL"]

lint.ignore = [
    "E501",    # 'E501' (line length violations - will be handled by formatter)

    # warning: The following rules may cause conflicts when used with the formatter: `COM812`, `ISC001`. To avoid unexpected behavior, we recommend disabling these rules, either by removing them from the `select` or `extend-select` configuration, or adding them to the `ignore` configuration.
    "COM812", # should not be used with ruff format
    "ISC001", # should not be used with ruff format

    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring
    "D107",   # Undecomented public init
    "D212",   # Multi-line docstring summary
    "D400",   # First line should end with a period
    "D401",   # First line should be in imperative mood
    "D406",   # Section name should end with a newline
    "D407",   # Dashed underline after section
    "D413",   # Missing blank line after last section
    "D415",   # First line should end with a punctuation
    "TD002",  # Missing author in TO DO comment
    "FIX002", # Fixme are treated as warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # use of assert
    "INP001",  # missing __init__.py
    "SLF001",  # private member accessed
    "PLR2004", # Magic values in comparison
    "D",       # pydocstyle
]
